feat: texture and bump map works

--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Getting Started with Three.js</title>
-    <style>
-      body {
-        margin: 0;
-      }
-    </style>
+    <title>Three.js app</title>
     <script type="importmap">
 			{
 				"imports": {
